--- a/style.scss
+++ b/style.scss
@@ -20,9 +20,10 @@ html {
 }
 
 body {
+  transform: scale(1.00);
   font-family: $base-font;
   color: $base-color;
-  line-height: 1.7em;
+  line-height: 1.5em;
 }
 
 .container {
@@ -47,7 +48,7 @@ h1, h2, h3, h5 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 28px;
   a {
     color: inherit;
   }
@@ -361,17 +362,17 @@ img {
   .site-avatar {
     margin:0 auto;
     display: block;
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 150px;
+    max-height: 150px;
 
     @include mobile {
-      max-width: 120px;
-      max-height: 120px;
+      max-width: 90px;
+      max-height: 90px;
     }
 
     img {
       display: inline-block;
-      border-radius: 2px;
+      border-radius: 1.5px;
     }
   }
 }
@@ -382,7 +383,7 @@ img {
   cursor: pointer;
   font-family: $base-font;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 24px;
   letter-spacing: 1px;
 }
 
@@ -651,7 +652,7 @@ nav {
 
 // Footer
 .wrapper-footer-desktop {
-  margin-top: 50px;
+  margin-top: 30px;
   border-top: 1px solid $footer-border-color;
   background-color: $footer-background-color;
   position: absolute;
